Formulierung in Testfällen kleine Änderung

--- a/Pflichtenheft/Pflichtenheft.tex
+++ b/Pflichtenheft/Pflichtenheft.tex
@@ -511,7 +511,7 @@ Erst nach dem Bestehen aller hier aufgeführten Tests und Szenarien ist das Prod
     \item[/T210/] Der Nutzer bleibt stehen, die Musik stoppt. Der Nutzer läuft weiter, die Musik läuft weiter.
     \item[/T221/] Der Nutzer stellt einen Trainingsablaufplan zusammen.
     \item[/T222/] Die App gibt dem Nutzer über Sprachanweisung aus was die nächste Übung ist.
-    \item[/T223/] Nach Vorgangsende wird die Zeit angezeigt, die der \Gls{Vorgang} aktiv war. %changed
+    \item[/T223/] Nach Vorgangsende des Modus' Lauschen und Agieren wird die Zeit angezeigt, die der \Gls{Vorgang} aktiv war. %changed
     \item[/T250/] Der Nutzer ändert seinen Namen.
     \item[/T260/] Der Nutzer ändert die Sprache auf Englisch. Nach Neustart der App sind alle Texte auf Englisch. %changed
     \item[/T265/] Der Nutzer ruft erstmals die App auf. Die Sprache der App passt sich seiner Systemsprache an. %changed
