Entwurfsprotokoll grobe Struktur ergänzt

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -99,15 +99,26 @@ Die verwendete Notation richtet sich nach dem UML-Standard.
 \section{Klassenbeschreibung}
     \subsection{Übersicht}
     \subsection{Model}
-    \subsection{View}
+    \subsection{Settings Service}
+    %%valle: User machen...
+    %%name, steplength
     \subsection{View-Model}
-
-\section{Abläufe}
-
+    \subsection{View}
+    
+\section{Interaktionsdiagramme}
+\subsection{Aktivitätsdiagramm Lauschen und Agieren}
+\subsection{Sequenzdiagramme}
+%später:
+\subsubsection{Abläufe in der App}
+Programmstart
+Sprache Ändern
 \section{Entwurfdaten}
+\subsection{Ressourceenverzeichnis}
+\subsection{lokale Datenbank}
+\subsection{App Properties}
 
 \section{Klassenindex}
-
+%macht valle ganz am Ende oder wir lassen es weg
 \section{Anhang}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% END CONTENT %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
